cmake_minimum_required(VERSION 3.27)
project(Data_Structures_Algo_MIPT)

set(CMAKE_CXX_STANDARD 14)

add_executable(Data_Structures_Algo_MIPT
        01.Arrays/2d_array.cpp
        02.Two_Pointers/2_pointers.cpp
        03.1.STL/array.cpp
        03.1.STL/dequeue.cpp
        03.1.STL/forward_list.cpp
        03.1.STL/heap.cpp
        03.1.STL/list.cpp
        03.1.STL/map.cpp
        03.1.STL/max_heap.cpp
        03.1.STL/multimap.cpp
        03.1.STL/multiset.cpp
        03.1.STL/priority_q.cpp
        03.1.STL/set.cpp
        03.1.STL/unordered-set.cpp
        03.Stack/stack.cpp
        A.game_game_game/main.cpp
        avl-trees/main.cpp
        binary_search/binary_search.cpp
        "D. Store_for_milk/main.cpp"
        dynamic_array/main.cpp
        "E. Top-Secret/main.cpp"
        "F-Where the hood at/main.cpp"
        fibonacci/main.cpp
        "G. Who let the Rick out/main.cpp"
        Game-Game-Game/main.cpp
        grasshopper/main.cpp
        "H. Rick-for-the-weeknd/main.cpp"
        hash_tables/1.cpp
        hash_tables/10.cpp
        hash_tables/2.cpp
        hash_tables/3.cpp
        hash_tables/4.cpp
        hash_tables/5.cpp
        hash_tables/6.cpp
        hash_tables/7.cpp
        hash_tables/8.cpp
        hash_tables/9.cpp
        hash_tables/main.cpp
        I-Wake-Me-Up/main.cpp
        J-Look-What-You-Made-Rick-Do/main.cpp
        k-th-order-statistics/main.cpp
        "K. Shrek/main.cpp"
        Kth-Order-Statistics/main.cpp
        L.Gunters/Lazy_updates.cpp
        L.Gunters/main.cpp
        LSD_Sort/main.cpp
        quicksort/main.cpp
        reversed_linked_list/reverse.cpp
        reversed_linked_list/reverse_recursive.cpp
        Reversing_num/reversing_num.cpp
        Sorting_Hat/main.cpp
        Sorting_hat/main.cpp
        stack/main.cpp)
